# zed-phpcs-lsp

./: Cargo.toml  README.md  extension.toml
.github/actions/publish-zed-extension/: README.md  action.yml  publish.sh
.github/workflows/: ci.yml  dependabot-auto-merge.yml  manage-discussions.yml  release.yml
lsp-server/: Cargo.toml
lsp-server/src/: main.rs  tools.rs
src/: lib.rs
