[package]
name = "phpcs-lsp-server"
version = "0.4.3"
edition = "2021"

[[bin]]
name = "phpcs-lsp-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
regex = "1.0"
url = "2.0"
sha2 = "0.11"
lz4_flex = "0.13"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.22"
